Fixed some of the padding so there's not so much white space at the top.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    padding-top: 110px; /* Bootstrap's documented way to make sure the header content and the body content don't conflict */
+    padding-top: 90px; /* Bootstrap's documented way to make sure the header content and the body content don't conflict */
     padding-bottom: 60px; /* Bootstrap's documented way to make sure the footer content and the body content don't conflict */
 }
 
